tests/integration/tests/check_commands/CHECK-EMPTY/02-error_CHECK_EMPTY_negative_match/sample.itest
; RUN: %cat "%S/filecheck.input" | %expect_exit 1 %FILECHECK_EXEC "%S/filecheck.check" | %FILECHECK_TESTER_EXEC "%s" --match-full-lines

; CHECK: {{.*}}filecheck.check:2:15: error: CHECK-EMPTY: expected string not found in input{{$}}
; CHECK: {{^}}; CHECK-EMPTY:{{$}}
; CHECK: {{^}}              ^
; CHECK: {{^}}<stdin>:2:1: note: scanning from here{{$}}
; CHECK: string2
; CHECK: {{^}}^{{$}}
; CHECK-EMPTY:
